--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,11 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=blog
+DB_USERNAME= your-username
+DB_PASSWORD= your-password
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+JWT_SECRET=
