--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "firebase/php-jwt": "^6.10",
         "laravel/lumen-framework": "^10.0",
+        "stripe/stripe-php": "^14.6",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
